--- a/Grip_TSF_Data_Predicton.ipynb
+++ b/Grip_TSF_Data_Predicton.ipynb
@@ -6,7 +6,8 @@
       "name": "Grip - TSF Data Predicton.ipynb",
       "private_outputs": true,
       "provenance": [],
-      "authorship_tag": "ABX9TyPyfcc1I2KY0GYI68bABh9e"
+      "authorship_tag": "ABX9TyPyfcc1I2KY0GYI68bABh9e",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -17,6 +18,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/SaniTheWay/Grip-TSF-June2021/blob/main/Grip_TSF_Data_Predicton.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
